--- a/index.html
+++ b/index.html
@@ -13,9 +13,24 @@
     <!-- Fontawesome  -->
     <script src="https://kit.fontawesome.com/6a19c75f45.js" crossorigin="anonymous"></script>
     <!-- /Fontawesome  -->
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
+    <!-- /CSS  -->
 </head>
 <body>
-
+    <div class="main_container">
+        <div class="messages_container">
+            <div class="header_messages"></div>
+            <div class="notification_messages"></div>
+            <div class="search_messages"></div>
+            <div class="main_messages"></div>
+        </div>
+        <div class="chat_container">
+            <div class="header_chat"></div>
+            <div class="main_chat"></div>
+            <div class="bottom_chat"></div>
+        </div>
+    </div>
     <!-- JS  -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="contacts.js"></script>
