--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <!-- /Google Fonts  -->
     <!-- Fontawesome  -->
     <script src="https://kit.fontawesome.com/6a19c75f45.js" crossorigin="anonymous"></script>
@@ -20,13 +20,36 @@
 <body>
     <div class="main_container">
         <div class="messages_container">
-            <div class="header_messages"></div>
+            <div class="header_messages">
+                <div class="user_icon">
+                    <img src="img/avatar_io.jpg" alt="Foto profilo personale">
+                    <p>Sofia</p>
+                </div>
+                <div class="user_preferences">
+                    <i class="fa-solid fa-circle-notch"></i>
+                    <i class="fa-solid fa-message"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                </div>
+            </div>
             <div class="notification_messages"></div>
             <div class="search_messages"></div>
             <div class="main_messages"></div>
         </div>
         <div class="chat_container">
-            <div class="header_chat"></div>
+            <div class="header_chat">
+                <div class="chat_icon">
+                    <img src="img/avatar_1.jpg" alt="Michele">
+                    <div class="chat_details">
+                        <p>Michele</p>
+                        <span>Ultimo accesso oggi alle 12.00</span>
+                    </div>
+                </div>
+                <div class="chat_preferences">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-paperclip"></i>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                </div>
+            </div>
             <div class="main_chat"></div>
             <div class="bottom_chat"></div>
         </div>
