Completata chat principale

--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
                     <i class="fa-solid fa-ellipsis-vertical"></i>
                 </div>
             </div>
-            <div class="main_chat"></div>
+            <div class="main_chat">
+                <div class="chat_message text_align_right">
+                        <div class="message_sent" >Ciao</div>
+                </div>
+                <div class="chat_message text_align_left">
+                    <div class="message_received" >Ciao</div>
+            </div>
+            </div>
             <div class="bottom_chat">
                 <i class="fa-regular fa-face-smile"></i>
                 <input class="text_message" type="text" placeholder="Scrivi un messaggio">
