Sistemati font-size, spaziature e ordinato css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/6a19c75f45.js" crossorigin="anonymous"></script>
     <!-- /Fontawesome  -->
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- /CSS  -->
 </head>
 <body>
@@ -70,10 +70,16 @@
             </div>
             <div class="main_chat">
                 <div class="chat_message text_align_right">
-                        <div class="message_sent" >Ciao</div>
+                        <div class="message_sent" >
+                            Ciao
+                            <span class="time_message">orario</span>
+                        </div>
                 </div>
                 <div class="chat_message text_align_left">
-                    <div class="message_received" >Ciao</div>
+                    <div class="message_received" >
+                        Ciao
+                        <span class="time_message">orario</span>
+                    </div>
             </div>
             </div>
             <div class="bottom_chat">
@@ -85,7 +91,7 @@
     </div>
     <!-- JS  -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
     <!-- /JS  -->
 
 </body>
