--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="search_messages">
                 <button class="search_btn" @click="searchContacts()"><i class="fa-solid fa-magnifying-glass"></i></button>
-                <input type="text" placeholder="Cerca o inizia una nuova chat" v-model="searchContact" @keypress="searchContacts()">
+                <input type="text" placeholder="Cerca o inizia una nuova chat" v-model="searchContact" @keyup="searchContacts()" @keyup.backspace="searchContacts()">
             </div>
             <div class="main_messages">
                 <div v-for="(elm, index) in contacts" class="contact" @click="currentContact = index" :class="(currentContact == index)? `active`:``" v-if="elm.visible == true">
